# bosgenesis-mop-execution-agent

./: .env.example  .gitignore  API.md  Dockerfile  HLD.md  LLD.md  MCP_CONTRACTS.md  PLAN.md  README.md  SPECS.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml  image.yml
config/: SKILLS.md  config.toml  machine_execution_plan.schema.yaml  policy.namespace-only-v1.yaml  redaction.yaml  settings.yaml  state_machine.yaml
docs/: ADR_NAMESPACE_DIGITAL_TWIN_FOUNDATION.md  DEPLOYMENT.md  OBSERVABILITY.md  RUNBOOK.md  SAMPLE_REQUESTS.md
docs/dashboards/: mop-execution-agent-dashboard.json
helm/bosgenesis-mop-execution-agent/: .helmignore  Chart.yaml  values.credentials.example.yaml  values.yaml
knowledge-base/: BOS_Genesis_MoP_Execution_Agent_HLD.md  BOS_Genesis_MoP_Execution_Agent_LLD.md  MCP_TOOL_CONTRACT.md  OPENAPI.yaml  PLAN.md  SPECS.md  mcp_tool_contract.json
migrations/postgres/: 0001_phase2_core.sql  0002_phase11_memory.sql  0003_namespace_twin_foundation.rollback.sql  0003_namespace_twin_foundation.sql
playbook/: create-companion-secrets.sh  deploy.sh  undeploy.sh
src/bosgenesis_mop_execution_agent/: __init__.py
tests/: REQUIREMENT_TRACEABILITY.md  test_health.py  test_mcp_server.py
tests/contract/: test_namespace_twin_phase4_foundation.py  test_namespace_twin_phase5a_overview.py  test_namespace_twin_phase5b_release_delta.py  test_namespace_twin_phase5c_dependency_graph.py  test_namespace_twin_phase5d_policy_twin.py  test_namespace_twin_phase5e_dry_run.py  test_namespace_twin_phase5f_rollback.py  test_namespace_twin_phase5g_drift.py  test_namespace_twin_phase5h_runtime_behavior.py  test_namespace_twin_phase5i_audit_reports.py  test_namespace_twin_phase5j_release_note_validation.py  test_namespace_twin_phase5k_mop_replay.py  test_namespace_twin_phase6_execution_gate.py  test_namespace_twin_phase7_dry_run_fidelity.py  (+3 more)
(+149 files in other folders)
